Fix spacing for train viewer

--- a/src/app/train-displayer/train-displayer.component.scss
+++ b/src/app/train-displayer/train-displayer.component.scss
@@ -3,7 +3,7 @@ mat-grid-tile {
 }
 
 .compertiment {
-    padding: 10px;
+    padding: 5px;
     font-size: 20px;
     color: white;
     border-right: 1px solid white;
